# jacktool-common

./: CMakeLists.txt  PatchExtractorConfiguration.h  Rectangle.h  extract_patch.cpp  markings.cpp  markings.h
